2011-02-02 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-updater.c:
	* src/core/na-updater.h (na_updater_should_pasted_be_relabeled): New function.

	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-edit.h
	(nact_main_menubar_edit_is_pasted_object_relabeled): Removed function.

	* src/nact/nact-tree-model-dnd.c (drop_inside): Updated accordingly.

	* src/nact/base-application.c (class_init):
	* src/nact/base-assistant.c (class_init):
	* src/nact/base-window.c (class_init):
	* src/nact/nact-main-window.c (instance_constructed):
	Setup construction properties.

	* src/nact/nact-application.c:
	* src/nact/nact-application.h (nact_application_get_updater):
	Set NactApplication as a const argument.

	Deprecate NAIPivotConsumer interface

	* src/core/na-ipivot-consumer.c:
	* src/core/na-ipivot-consumer.h: Removed files.

	* src/core/Makefile.am:
	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	* src/nact/nact-application.c:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-menubar.c: Updated accordingly.

	* src/core/na-pivot.c:
	* src/core/na-pivot.h
	(na_pivot_set_automatic_reload): Remove unused function.

	* src/test/test-reader.c: Updated accordingly.

	* src/nact/nact-main-window.c (instance_constructed):
	Connect to PIVOT_SIGNAL_ITEMS_CHANGED signal.

	Rename nact-gtk-utils to base-gtk-utils and merge base-iprefs into it

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.c: Removed files.

	* src/nact/Makefile.am:
	* src/nact/base-gtk-utils.c:
	* src/nact/base-gtk-utils.h:
	* src/nact/base-window.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-iexecution-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-iproperties-tab.c:
	* src/nact/nact-ischemes-tab.c: